Add Output-less C version

--- a/C/04_Domain_decomposition/Makefile
+++ b/C/04_Domain_decomposition/Makefile
@@ -15,3 +15,6 @@ array.o:array.c array.h
 	mpicc -g -c -I ./support -o ./lib/array.o ./support/array.c
 display.o:display.c display.h array.o
 	mpicc -g -c -I ./support -o ./lib/display.o ./support/display.c
+noio: parallel.c array.o display.o mpi_setup.o
+	mpicc -g -c -I ./support -DNODISPLAY -o ./lib/mpi_setup.o ./support/mpi_setup.c
+	mpicc -g -I ./support -DNODISPLAY -o parallel ./lib/array.o ./lib/display.o ./lib/mpi_setup.o parallel.c
